# sexup

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
backupill/: __init__.py  cli.py  util.py  utils.py
backupill/gui/: README.md
test/: test.asc  test.py
tests/: test_click.py  test_utils.py
